lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lab3
spec:
  tls:
    - secretName: tls-secret
    - hosts:
        - lab3sammyxd.com
  rules:
    - host: lab3sammyxd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-lab3
                port:
                  name: http
